# IoT_monitoring

./: README.md  main.py  manage.py  pyproject.toml  telemetry.txt
src/: app.py  config.py  device.py  example.env_test  monitor.py  session.py
tests/: test_interface.py
